cpp (make push)

--- a/module00/ex00/Makefile
+++ b/module00/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/04 19:34:53 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/04 19:35:12 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -45,9 +45,9 @@ test: $(NAME)
 	./$<
 
 push:
-	git add .
-	git commit -m "cpp (make push)"
-	git status
-	git push
+	@git add .
+	@git commit -m "cpp (make push)"
+	@git status
+	@git push
 
 .PHONY: all clean fclean re test
