--- a/module00/ex01/Makefile
+++ b/module00/ex01/Makefile
@@ -6,48 +6,62 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/04 19:35:12 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/06 15:56:36 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = phonebook
 
-CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+SRC =			\
+	main.cpp	\
 
-S = megaphone.cpp
+CXX = c++
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -MMD -MP
+
+S = src
+I = inc
 B = .build
-D = $(S:%.cpp=$(B)/%.d)
+D = $(SRC:%.cpp=$(B)/%.d)
 O = $(D:.d=.o)
+
+-include $(D)
+vpath %.cpp $(S)
 
 all: $(NAME)
 
 $(NAME): $(O)
-	$(CXX) $(CXXFLAGS) $^ -o $@
+	@$(CXX) $(CXXFLAGS) $^ -o $@
+	@echo "$(DONE) $@"
 
 $(B):
-	mkdir $@
+	@mkdir $@
 
 $(B)/%.o: %.cpp | $(B)
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+	@echo "$(COMPILE)$(NOC) $*.c"
+	@$(CXX) $(CXXFLAGS) $(I:%=-I %) -c $< -o $@
 
 clean:
-	rm -rf $(B)
+	@echo "$(INFO) deleting $(B)"
+	@rm -rf $(B)
 
 fclean: clean
-	rm -f $(NAME)
+	@echo "$(INFO) deleting $(NAME)"
+	@rm -f $(NAME)
 
 re: fclean all
 
-test: $(NAME)
-	./$< "shhhhh... I think the students are asleep..."
-	./$< Damnit " ! " "Sorry students, I thought this thing was off."
-	./$<
-
 push:
 	@git add .
-	@git commit -m "cpp (make push)"
 	@git status
+	@git commit -m "cpp (make push)"
 	@git push
 
-.PHONY: all clean fclean re test
+.PHONY: all clean fclean re push
+
+YELLOW	= \033[38;5;184m
+GREEN	= \033[38;5;46m
+CYAN	= \033[0;49;96m
+COMPILE	= [$(CYAN)COMP$(NOC)]
+INFO	= [$(YELLOW)INFO$(NOC)]
+DONE	= [$(GREEN)DONE$(NOC)]
+NOC		= \033[0m
