--- a/module00/ex01/Makefile
+++ b/module00/ex01/Makefile
@@ -6,14 +6,16 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/06 15:56:36 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/06 16:19:20 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = phonebook
 
-SRC =			\
-	main.cpp	\
+SRC =				\
+	main.cpp		\
+	Contact.cpp		\
+	PhoneBook.cpp	\
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -MMD -MP
@@ -37,7 +39,7 @@ $(B):
 	@mkdir $@
 
 $(B)/%.o: %.cpp | $(B)
-	@echo "$(COMPILE)$(NOC) $*.c"
+	@echo "$(COMPILE)$(NOC) $*.cpp"
 	@$(CXX) $(CXXFLAGS) $(I:%=-I %) -c $< -o $@
 
 clean:
