--- a/module00/ex01/Makefile
+++ b/module00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/07 00:45:28 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/09 02:01:32 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,7 +17,12 @@ SRC =				\
 	Contact.cpp		\
 	PhoneBook.cpp	\
 
-CXX = c++
+OS = $(shell uname -s)
+ifeq ($(OS),Darwin)
+	CXX = c++-11
+else
+	CXX = c++
+endif
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 S = src
