--- a/module00/ex02/Makefile
+++ b/module00/ex02/Makefile
@@ -6,17 +6,22 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/08 00:12:50 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/09 01:58:33 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = bank
 
-SRC =				\
-	tests.cpp		\
-	Account.cpp		\
+SRC =			\
+	tests.cpp	\
+	Account.cpp	\
 
-CXX = c++
+OS = $(shell uname -s)
+ifeq ($(OS),Darwin)
+	CXX = c++-11
+else
+	CXX = c++
+endif
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 S = src
