--- a/module01/ex01/Makefile
+++ b/module01/ex01/Makefile
@@ -6,17 +6,16 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/09 01:58:33 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/09 15:19:11 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = brainz
+NAME = horde
 
-SRC =				\
-	main.cpp		\
-	Zombie.cpp		\
-	newZombie.cpp	\
-	randomChump.cpp	\
+SRC =					\
+	main.cpp			\
+	Zombie.cpp			\
+	zombieHorde.cpp		\
 
 OS = $(shell uname -s)
 ifeq ($(OS),Darwin)
