--- a/module00/ex00/Makefile
+++ b/module00/ex00/Makefile
@@ -6,11 +6,14 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/09 02:01:04 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/09 15:41:15 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = megaphone
+
+SRC =				\
+	megaphone.cpp	\
 
 OS = $(shell uname -s)
 ifeq ($(OS),Darwin)
@@ -20,27 +23,34 @@ else
 endif
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-S = megaphone.cpp
+S = .
+I = inc
 B = .build
-D = $(S:%.cpp=$(B)/%.d)
-O = $(D:.d=.o)
+O = $(SRC:%.cpp=$(B)/%.o)
+D = $(SRC:%.cpp=$(B)/%.d)
 
 all: $(NAME)
 
 $(NAME): $(O)
-	$(CXX) $(CXXFLAGS) $^ -o $@
+	@$(CXX) $(CXXFLAGS) $^ -o $@
+	@echo "$(DONE) $@"
 
 $(B):
-	mkdir $@
+	@mkdir $@
 
-$(B)/%.o: %.cpp | $(B)
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+-include $(D)
+
+$(B)/%.o: $(S)/%.cpp | $(B)
+	@echo "$(COMPILE)$(NOC) $*.cpp"
+	@$(CXX) $(CXXFLAGS) -MMD -MP $(I:%=-I %) -c $< -o $@
 
 clean:
-	rm -rf $(B)
+	@echo "$(INFO) deleting $(B)"
+	@rm -rf $(B)
 
 fclean: clean
-	rm -f $(NAME)
+	@echo "$(INFO) deleting $(NAME)"
+	@rm -f $(NAME)
 
 re: fclean all
 
@@ -55,4 +65,12 @@ push:
 	@git commit -m "cpp (make push)"
 	@git push
 
-.PHONY: all clean fclean re test
+.PHONY: all clean fclean re test push
+
+YELLOW	= \033[38;5;184m
+GREEN	= \033[38;5;46m
+CYAN	= \033[0;49;96m
+COMPILE	= [$(CYAN)COMP$(NOC)]
+INFO	= [$(YELLOW)INFO$(NOC)]
+DONE	= [$(GREEN)DONE$(NOC)]
+NOC		= \033[0m
