--- a/module01/ex02/Makefile
+++ b/module01/ex02/Makefile
@@ -6,17 +6,14 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/09 01:58:33 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/09 16:00:22 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = brainz
+NAME = pointers
 
-SRC =				\
-	main.cpp		\
-	Zombie.cpp		\
-	newZombie.cpp	\
-	randomChump.cpp	\
+SRC =			\
+	main.cpp	\
 
 OS = $(shell uname -s)
 ifeq ($(OS),Darwin)
