infinite loop to be fixed

--- a/module01/ex04/Makefile
+++ b/module01/ex04/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = replace
+NAME = sed
 
 SRC =			\
 	main.cpp	\
