--- a/.blueprint/templates/Makefile
+++ b/.blueprint/templates/Makefile
@@ -22,7 +22,7 @@ ifeq ($(HOST),macbook)
 else
 	CXX = c++
 endif
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #$(DEBUG)
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic #$(DEBUG)
 DEBUG = -g3 -fsanitize=address
 
 S = src
