canonical form added, improved scripts

--- a/.blueprint/templates/Makefile
+++ b/.blueprint/templates/Makefile
@@ -10,11 +10,11 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = ExecutableName
+NAME = executable
 
 SRC =				\
 	main.cpp		\
-	ClassName.cpp	\
+	Class.cpp	\
 
 HOST = $(shell hostname)
 ifeq ($(HOST),macbook)
