--- a/module02/ex00/Makefile
+++ b/module02/ex00/Makefile
@@ -6,15 +6,15 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/13 02:02:46 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/15 17:01:22 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = ExecutableName
+NAME = fixed
 
 SRC =				\
 	main.cpp		\
-	ClassName.cpp	\
+	Fixed.cpp		\
 
 HOST = $(shell hostname)
 ifeq ($(HOST),macbook)
@@ -22,7 +22,7 @@ ifeq ($(HOST),macbook)
 else
 	CXX = c++
 endif
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #$(DEBUG)
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic #$(DEBUG)
 DEBUG = -g3 -fsanitize=address
 
 S = src
