--- a/module03/ex03/Makefile
+++ b/module03/ex03/Makefile
@@ -6,11 +6,11 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/17 20:31:20 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/17 20:34:23 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = FragTrap
+NAME = DiamondTrap
 
 SRC =				\
 	main.cpp		\
