changed default executable name

--- a/.blueprint/templates/Makefile
+++ b/.blueprint/templates/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = executable
+NAME = a.out
 
 SRC =				\
 	main.cpp		\
