--- a/module06/ex00/Makefile
+++ b/module06/ex00/Makefile
@@ -6,11 +6,11 @@
 #    By: lraffin <lraffin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/04 19:22:29 by lraffin           #+#    #+#              #
-#    Updated: 2022/03/23 16:45:57 by lraffin          ###   ########.fr        #
+#    Updated: 2022/03/24 02:47:54 by lraffin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = conversion
+NAME = convert
 
 SRC =				\
  	Conversion.cpp	\
@@ -56,46 +56,80 @@ fclean: clean
 
 re: fclean all
 
-test: try_error try_char try_int try_float try_double
+test: error char int float double
 
-try_error: $(NAME)
+error: $(NAME)
 		@echo "*** $(B_GREEN)ERROR$(NOC) ***\n"
 		./$<
+		@echo "\n"
 		./$< 1 2 53.0f
-		./$< bonjour
+		@echo "\n"
+		./$< 153.wer0f
+		@echo "\n"
 
-try_char: $(NAME)
+char: $(NAME)
 		@echo "\n*** $(B_GREEN)CHAR$(NOC) ***\n"
 		./$< 'c'
+		@echo "\n"
 		./$< 'a'
-		./$< 'Z'
+		@echo "\n"
+		./$< Z
+		@echo "\n"
+		./$< bonjour
+		@echo "\n"
 
-try_int: $(NAME)
+int: $(NAME)
 		@echo "\n*** $(B_GREEN)INT$(NOC) ***\n"
 		./$< 0
+		@echo "\n"
 		./$< -42
+		@echo "\n"
 		./$< 42
+		@echo "\n"
 		./$< 2147483647
+		@echo "\n"
 		./$< -2147483648
+		@echo "\n"
 		./$< 2147483648
+		@echo "\n"
 
-try_float: $(NAME)
+float: $(NAME)
 		@echo "\n*** $(B_GREEN)FLOAT$(NOC) ***\n"
 		./$< 0.0f
+		@echo "\n"
 		./$< -4.2f
+		@echo "\n"
 		./$< 186.492f
+		@echo "\n"
+		./$< 3.40282e+38
+		@echo "\n"
+		./$< 3.9e+38
+		@echo "\n"
 		./$< -inff
+		@echo "\n"
 		./$< +inff
+		@echo "\n"
 		./$< nanf
+		@echo "\n"
 
-try_double: $(NAME)
+double: $(NAME)
 		@echo "\n*** $(B_GREEN)DOUBLE$(NOC) ***\n"
 		./$< 0.0
+		@echo "\n"
 		./$< 53.0
+		@echo "\n"
 		./$< 9178.1320
+		@echo "\n"
+		./$< 1.79769e+308
+		@echo "\n"
+		./$< 2e+308
+		@echo "\n"
 		./$< -inf
+		@echo "\n"
 		./$< +inf
+		@echo "\n"
 		./$< nan
+		@echo "\n"
 
 push:
 	@git add .
@@ -104,7 +138,7 @@ push:
 	@git push
 
 .PHONY: all clean fclean re push test
-		try_error try_char try_int try_float try_double
+		error char int float double
 
 YELLOW	= \033[38;5;184m
 GREEN	= \033[38;5;46m
